yarn workspaces config

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
+  "version": "independent",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
-  "version": "0.0.0"
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
