--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
-.history
-*.log
-.vscode
+# compiled output
+dist
 node_modules
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.history
+
+# IDE - VSCode
+.vscode
