--- a/apps/jackbnb-ms/package.json
+++ b/apps/jackbnb-ms/package.json
@@ -24,14 +24,17 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "aws-lambda": "^1.0.6",
     "aws-serverless-express": "^3.4.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
-    "mongoose": "^6.0.7",
+    "mongoose": "^5.12.4",
     "normalize-mongoose": "^0.0.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
