--- a/apps/jackbnb-ms/package.json
+++ b/apps/jackbnb-ms/package.json
@@ -10,6 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "serverless offline",
+    "deploy": "serverless deploy --stage dev",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
