--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2.4.1
+        with:
+          node-version: 16.x
       - uses: m19c/action-lerna@1.0.0
       - uses: aws-actions/configure-aws-credentials@v1
         with:
