--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.4.1
         with:
-          node-version: 16.x
+          node-version: 14.x
+      - name: test
+        run: node -v
       - uses: m19c/action-lerna@1.0.0
       - uses: aws-actions/configure-aws-credentials@v1
         with:
