--- a/apps/jackbnb-ms/package.json
+++ b/apps/jackbnb-ms/package.json
@@ -28,13 +28,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.0.8",
     "aws-lambda": "^1.0.6",
-    "aws-serverless-express": "^3.4.0",
+    "aws-serverless-fastify": "^1.0.27",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "fastify": "^3.22.0",
     "mongoose": "^5.12.4",
     "normalize-mongoose": "^0.0.1",
     "passport": "^0.5.0",
@@ -49,10 +50,8 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/aws-lambda": "^8.10.83",
-    "@types/aws-serverless-express": "^3.3.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
@@ -70,6 +69,7 @@
     "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-plugin-include-dependencies": "^5.0.0",
     "serverless-plugin-typescript": "^2.1.0",
+    "serverless-plugin-warmup": "^6.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
