--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@ on:
   push:
     branches: [ main ]
 env:
-  MONGO_URL: ${{ secrets.MONGO_URL }}
+  MONGO_CLUSTER: ${{ secrets.MONGO_CLUSTER }}
+  MONGO_DATABASE: ${{ secrets.MONGO_DATABASE }}
+  MONGO_PARAMS: ${{ secrets.MONGO_PARAMS }}
   API_TOKEN: ${{ secrets.API_TOKEN }}
 jobs:
   build:
