--- a/apps/jackbnb-ms/serverless.yml
+++ b/apps/jackbnb-ms/serverless.yml
@@ -20,20 +20,12 @@ provider:
   runtime: nodejs14.x
   lambdaHashingVersion: 20201221
   environment:
-    MONGO_URL: ${env:MONGO_URL, ''}
+    MONGO_URL: ${env:MONGO_URL}
     API_TOKEN: ${env:API_TOKEN}
-    MONGO_CLUSTER: ${env:MONGO_CLUSTER, ''}
-    MONGO_DATABASE: ${env:MONGO_DATABASE, ''}
-    MONGO_PARAMS: ${env:MONGO_PARAMS, ''}
 
 functions:
   jackbnb-rest-v1:
     handler: src/main.handler
-    vpc:
-      securityGroupIds:
-        - sg-0330789b86e348c2c
-      subnetIds:
-        - subnet-0a0d4ec631714ef34
     events:
       - http:
           path: api/v1/{proxy+}
