--- a/apps/jackbnb-ms/serverless.yml
+++ b/apps/jackbnb-ms/serverless.yml
@@ -26,11 +26,11 @@ provider:
 functions:
   jackbnb-rest-v1:
     handler: src/main.handler
-    # vpc:
-    #   securityGroupIds:
-    #     - sg-0330789b86e348c2c
-    #   subnetIds:
-    #     - subnet-0a0d4ec631714ef34
+    vpc:
+      securityGroupIds:
+        - sg-0d382faddc97bd98a
+      subnetIds:
+        - subnet-0abe7779f1e65974b
     events:
       - http:
           path: api/v1/{proxy+}
