--- a/apps/jackbnb-ms/package.json
+++ b/apps/jackbnb-ms/package.json
@@ -35,8 +35,8 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "cookie-parser": "^1.4.5",
     "fastify": "^3.22.0",
+    "fastify-cookie": "^5.3.1",
     "mongoose": "^6.0.8",
     "normalize-mongoose": "^0.0.1",
     "passport": "^0.5.0",
@@ -52,7 +52,6 @@
     "@nestjs/testing": "^8.0.9",
     "@types/aws-lambda": "^8.10.83",
     "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
