--- a/apps/jackbnb-fe/package.json
+++ b/apps/jackbnb-fe/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.8",
