--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Deploy
 on:
   push:
-    branches: [ main ]
+    branches: [ main, microservices ]
 env:
   MONGO_URL: ${{ secrets.MONGO_URL }}
   API_TOKEN: ${{ secrets.API_TOKEN }}
