add microservices template

--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "version": "independent",
   "packages": [
     "packages/*",
-    "apps/*"
+    "apps/*",
+    "microservices/*"
   ],
   "npmClient": "yarn",
   "useWorkspaces": true
