--- a/microservices/auth-ms/package.json
+++ b/microservices/auth-ms/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "^8.0.9",
     "aws-lambda": "^1.0.6",
     "aws-serverless-fastify": "^1.0.27",
