--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,9 +16,7 @@ sonar.exclusions=**/node_modules/**,\
   **/test-constants.ts,\
   dist/**,\
 
-sonar.javascript.lcov.reportPaths=apps/jackbnb-fe/coverage/lcov.info,\
-#  apps/jackbnb-ms/coverage/lcov.info,\
-
+sonar.javascript.lcov.reportPaths=apps/jackbnb-fe/coverage/lcov.info
 sonar.sources=.
 sonar.language=ts
 
