--- a/apps/jackbnb-ms/package.json
+++ b/apps/jackbnb-ms/package.json
@@ -58,6 +58,7 @@
     "serverless-plugin-include-dependencies": "^5.0.0",
     "serverless-plugin-typescript": "^2.1.0",
     "serverless-plugin-warmup": "^6.0.0",
+    "serverless-plugin-warmup-ts-bridge": "^0.1.3",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
