--- a/apps/jackbnb-ms/tsconfig.json
+++ b/apps/jackbnb-ms/tsconfig.json
@@ -6,10 +6,15 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "allowJs": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
     "skipLibCheck": true,
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "target": "es5",
+    "outDir": ".build",
+    "moduleResolution": "node",
+    "lib": ["es2015"],
+    "rootDir": "./"
   }
 }
