--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "license": "GPL-3.0",
   "workspaces": [
-    "packages/*",
+    "libs/*",
     "apps/*",
     "microservices/*"
  ],
