--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       - name: bootstrap
         run: lerna bootstrap
       - name: deploy
-        run: npm run deploy
+        run: lerna run deploy
