--- a/package.json
+++ b/package.json
@@ -2,62 +2,12 @@
   "name": "jackbnb",
   "private": true,
   "license": "GPL-3.0",
-  "scripts": {
-    "deploy": "serverless deploy --stage dev"
-  },
   "workspaces": [
     "libs/*",
     "apps/*",
     "microservices/*"
   ],
-  "dependencies": {
-    "@nestjs/common": "^8.0.9",
-    "@nestjs/core": "^8.0.9",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^9.0.0",
-    "@nestjs/platform-fastify": "^8.0.9",
-    "aws-lambda": "^1.0.6",
-    "aws-serverless-fastify": "^1.0.27",
-    "aws4": "^1.11.0",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "fastify": "^3.22.0",
-    "fastify-cookie": "^5.3.1",
-    "mongoose": "^6.0.8",
-    "normalize-mongoose": "^0.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
-  },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.9",
-    "@types/aws-lambda": "^8.10.83",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.0.6",
-    "lerna": "^4.0.0",
-    "prettier": "^2.3.2",
-    "serverless": "^2.60.2",
-    "serverless-offline": "^8.2.0",
-    "serverless-plugin-common-excludes": "^4.0.0",
-    "serverless-plugin-include-dependencies": "^5.0.0",
-    "serverless-plugin-typescript": "^2.1.0",
-    "serverless-plugin-warmup": "^6.0.0",
-    "serverless-plugin-warmup-ts-bridge": "^0.1.3",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "lerna": "^4.0.0"
   }
 }
