--- a/libs/exception-filter/package.json
+++ b/libs/exception-filter/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@jackbnb/exception-filter",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "fastify": "^3.22.0"
   },
