--- a/libs/serverless/package.json
+++ b/libs/serverless/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jackbnb/serverless",
   "version": "0.1.0",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc"
