--- a/microservices/properties-ms/package.json
+++ b/microservices/properties-ms/package.json
@@ -15,6 +15,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@jackbnb/serverless": "^0.1.0",
+    "@jackbnb/paginate": "^0.1.0",
     "@nestjs/common": "^8.0.9",
     "@nestjs/core": "^8.0.9",
     "@nestjs/jwt": "^8.0.0",
@@ -50,6 +52,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "serverless": "^2.60.2",
+    "serverless-domain-manager": "^5.1.5",
     "serverless-offline": "^8.2.0",
     "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-plugin-include-dependencies": "^5.0.0",
