add build process

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,7 @@ jobs:
           aws-region: us-east-1
       - name: bootstrap
         run: lerna bootstrap
+      - name: build
+        run: lerna run build
       - name: deploy
         run: lerna run deploy
