--- a/libs/exception-filter/package.json
+++ b/libs/exception-filter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jackbnb/exception-filter",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc"
