--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Deploy
 on:
   push:
-    branches: [ main ]
+    branches: [ main, microservices ]
 env:
   MONGO_URL: ${{ secrets.MONGO_URL }}
   API_TOKEN: ${{ secrets.API_TOKEN }}
@@ -22,5 +22,7 @@ jobs:
           aws-region: us-east-1
       - name: bootstrap
         run: lerna bootstrap
+      - name: build
+        run: lerna run build
       - name: deploy
         run: lerna run deploy
