--- a/apps/jackbnb-fe/package.json
+++ b/apps/jackbnb-fe/package.json
@@ -20,15 +20,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.1",
     "@types/react": "17.0.26",
     "babel-jest": "^27.2.4",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "identity-obj-proxy": "^3.0.0",
+    "eslint-config-airbnb-typescript-prettier": "^4.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.4",
-    "react-test-renderer": "^17.0.2",
-    "typescript": "4.4.3"
+    "prettier": "^2.5.0",
+    "typescript": "4.4.4"
   }
 }
