--- a/libs/exception-filter/package.json
+++ b/libs/exception-filter/package.json
@@ -10,6 +10,8 @@
     "fastify": "^3.22.0"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.11"
+    "@nestjs/common": "^8.0.11",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^7.1.0"
   }
 }
