--- a/libs/serverless/package.json
+++ b/libs/serverless/package.json
@@ -12,7 +12,14 @@
     "@nestjs/core": "^8.0.11",
     "@nestjs/platform-fastify": "^8.0.11",
     "aws-lambda": "^1.0.6",
-    "fastify": "^3.22.0",
-    "fastify-cookie": "^5.3.1"
+    "fastify": "^2.6.0",
+    "fastify-cookie": "^5.3.1",
+    "passport": "^0.4.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^7.1.0"
+  },
+  "devDependencies": {
+    "inquirer": "^8.0.0",
+    "inquirer-autocomplete-prompt": "1.4.0"
   }
 }
