--- a/libs/exception-filter/package.json
+++ b/libs/exception-filter/package.json
@@ -7,7 +7,7 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "fastify": "^3.22.0"
+    "fastify": "3.24.0"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.11",
