--- a/microservices/auth-ms/package.json
+++ b/microservices/auth-ms/package.json
@@ -23,7 +23,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "fastify": "^3.22.0",
+    "fastify": "3.24.0",
     "fastify-cookie": "^5.3.1",
     "mongoose": "^6.0.8",
     "normalize-mongoose": "^0.0.1",
