--- a/microservices/properties-ms/package.json
+++ b/microservices/properties-ms/package.json
@@ -28,7 +28,7 @@
     "aws4": "^1.11.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "fastify": "^3.22.0",
+    "fastify": "3.24.0",
     "fastify-cookie": "^5.3.1",
     "mongoose": "^6.0.8",
     "normalize-mongoose": "^0.0.1",
