--- a/apps/jackbnb-fe/package.json
+++ b/apps/jackbnb-fe/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src",
     "test": "jest --runInBand"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "eslint": "7.32.0",
     "eslint-config-airbnb-typescript-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.4",
     "prettier": "^2.5.0",
     "typescript": "4.4.4"
