migrate sonar to wermote organization

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jackbnb",
   "private": true,
+  "version": "0.1.0",
   "license": "GPL-3.0",
   "scripts": {
     "build": "lerna run build --stream",
