--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
-sonar.projectKey=omarcresp_jackbnb
-sonar.organization=omarcresp
+sonar.projectKey=wermote_wermote
+sonar.organization=wermote
 
-sonar.projectName=jackbnb
+sonar.projectName=wermote
 sonar.projectVersion=0.1.0
 
 sonar.log.level=DEBUG
