--- a/libs/paginate/package.json
+++ b/libs/paginate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jackbnb/paginate",
+  "name": "@wermote/paginate",
   "version": "0.2.1",
   "main": "dist/index.js",
   "scripts": {
