--- a/microservices/properties-ms/package.json
+++ b/microservices/properties-ms/package.json
@@ -15,8 +15,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@jackbnb/serverless": "^0.1.0",
-    "@jackbnb/paginate": "^0.2.1",
+    "@wermote/serverless": "^0.1.0",
+    "@wermote/paginate": "^0.2.1",
     "@nestjs/common": "^8.0.9",
     "@nestjs/core": "^8.0.9",
     "@nestjs/jwt": "^8.0.0",
