--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "microservices/*"
   ],
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "jest": "^27.3.1",
     "lerna": "^4.0.0"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^1.7.1",
+    "@lerna/bootstrap": "^4.0.0",
+    "typescript": "^4.5.2"
   }
 }
