--- a/libs/serverless/package.json
+++ b/libs/serverless/package.json
@@ -7,18 +7,20 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@wermote/exception-filter": "^1.0.0",
     "@nestjs/common": "^8.0.11",
     "@nestjs/core": "^8.0.11",
-    "@nestjs/platform-fastify": "^8.0.11",
+    "@nestjs/platform-express": "^8.2.6",
+    "@wermote/exception-filter": "^1.0.0",
     "aws-lambda": "^1.0.6",
-    "fastify": "3.24.0",
-    "fastify-cookie": "^5.3.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.2",
     "passport": "^0.4.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^7.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
     "inquirer": "^8.0.0",
     "inquirer-autocomplete-prompt": "1.4.0"
   }
