auth microservices files update for migration

--- a/microservices/auth-ms/package.json
+++ b/microservices/auth-ms/package.json
@@ -16,15 +16,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.0",
     "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-fastify": "^8.0.9",
+    "@nestjs/platform-express": "^8.2.6",
+    "@types/aws-serverless-express": "^3.3.5",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
     "aws-lambda": "^1.0.6",
-    "aws-serverless-fastify": "^1.0.27",
+    "aws-serverless-express": "^3.4.0",
     "aws4": "^1.11.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "fastify": "3.24.0",
-    "fastify-cookie": "^5.3.1",
     "mongoose": "^6.0.8",
     "normalize-mongoose": "^0.0.1",
     "passport": "^0.5.0",
