--- a/microservices/properties-ms/package.json
+++ b/microservices/properties-ms/package.json
@@ -15,21 +15,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@wermote/serverless": "^0.1.0",
-    "@wermote/paginate": "^0.2.1",
     "@nestjs/common": "^8.0.9",
     "@nestjs/core": "^8.0.9",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.0",
-    "@nestjs/platform-fastify": "^8.0.9",
+    "@nestjs/platform-express": "^8.2.6",
+    "@wermote/paginate": "^0.2.1",
+    "@wermote/serverless": "^0.1.0",
     "aws-lambda": "^1.0.6",
-    "aws-serverless-fastify": "^1.0.27",
+    "aws-serverless-express": "^3.4.0",
     "aws4": "^1.11.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "fastify": "3.24.0",
-    "fastify-cookie": "^5.3.1",
+    "cookie-parser": "^1.4.6",
     "mongoose": "^6.0.8",
     "normalize-mongoose": "^0.0.1",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +40,9 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.9",
     "@types/aws-lambda": "^8.10.83",
+    "@types/aws-serverless-express": "^3.3.5",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
